# HERoEHS-ALICE-Operation

alice_foot_step_generator/: CMakeLists.txt  package.xml
alice_foot_step_generator/data/: kick_param.yaml  kick_param_1.yaml  kick_param_2.yaml
alice_foot_step_generator/include/alice_foot_step_generator/: alice_foot_step_generator_node.h  message_callback.h
alice_foot_step_generator/src/: alice_foot_step_generator_node.cpp  main.cpp  message_callback.cpp
alice_foot_step_planner/: CMakeLists.txt  package.xml
alice_foot_step_planner/config/: step_parameter1.yaml  step_parameter2.yaml
alice_foot_step_planner/data/: balance_param.yaml  balance_param1.yaml  balance_param2.yaml  initial_condition.yaml  initial_condition1.yaml  initial_condition2.yaml  joint_feedback_gain.yaml  joint_feedback_gain1.yaml  joint_feedback_gain2.yaml
alice_foot_step_planner/include/alice_foot_step_planner/: alice_foot_step_planner.h
alice_foot_step_planner/src/: alice_foot_step_planner.cpp  main.cpp
alice_gui/: CMakeLists.txt  mainpage.dox  package.xml
alice_gui/config/: balance_param.yaml  balance_param1.yaml  balance_param1_off.yaml  balance_param1_on.yaml  balance_param2.yaml  balance_param2_off.yaml  ball_tracking_gain.yaml  joint_data.yaml  joint_feedback_gain.yaml  joint_feedback_gain1 (copy).yaml  joint_feedback_gain1_on.yaml  joint_feedback_gain2_off.yaml  leg_gain.yaml  step_parameter1.yaml  step_parameter2.yaml
alice_gui/include/alice_gui/: main_window.hpp  qnode.hpp
alice_gui/resources/: images.qrc
alice_gui/src/: graph.cpp  main.cpp  main_window.cpp  qnode.cpp
alice_gui/ui/: main_window.ui
alice_walking_path_planner_test/: CMakeLists.txt  package.xml
alice_walking_path_planner_test/include/alice_walking_path_planner_test/: alice_walking_path_planner_test.h
alice_walking_path_planner_test/src/: main.cpp
